--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "strapi": "strapi",
     "deploy": "strapi deploy"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.25.9",
-    "@strapi/plugin-users-permissions": "4.25.9",
-    "@strapi/plugin-i18n": "4.25.9",
     "@strapi/plugin-cloud": "4.25.9",
+    "@strapi/plugin-i18n": "4.25.9",
+    "@strapi/plugin-users-permissions": "4.25.9",
+    "@strapi/provider-email-sendgrid": "^4.25.9",
+    "@strapi/strapi": "4.25.9",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-duplicate-button": "^1.3.16",
     "styled-components": "5.3.3"
   },
   "author": {
