--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/provider-email-sendgrid": "^4.25.9",
     "@strapi/strapi": "4.25.9",
     "better-sqlite3": "8.6.0",
+    "mysql": "^2.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
